Fix: photo was not centered on large screens/windows.

--- a/app/javascript/stylesheets/custom.scss
+++ b/app/javascript/stylesheets/custom.scss
@@ -61,3 +61,8 @@ img {
 .table th, .table td {
   padding: 4px;
 }
+
+.no-horiz-padding {
+  padding-left: 0px;
+  padding-right: 0px;
+}
